// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfile 1`] = `
<span
  class="UserProfilestyles__Box-sc-12uw6yl-0 jpSCHi"
  role="button"
  tabindex="0"
>
  <div
    class="Avatarstyles__Box-sc-1gv1068-0 kbavwE"
    title="Super User Name"
  >
    <div
      class="RoundIconstyles__Box-sc-15n018x-0 hUbeFl"
      color="seattle10"
    >
      S
    </div>
    <div
      class="Avatarstyles__ImageLayer-sc-1gv1068-1 hrXwyJ"
      src="https://avataaars.io/?avatarStyle=Transparent&topType=LongHairStraight2&accessoriesType=Prescription01&hairColor=BlondeGolden&facialHairType=MoustacheFancy&facialHairColor=BrownDark&clotheType=BlazerSweater&eyeType=Default&eyebrowType=Default&mouthType=Default&skinColor=Light"
    />
  </div>
  <span
    class="UserProfilestyles__Profile-sc-12uw6yl-1 jijcUx"
  >
    <span
      class="UserProfilestyles__Name-sc-12uw6yl-2 dmpuE"
    >
      Super User Name
    </span>
    <span
      class="UserProfilestyles__Description-sc-12uw6yl-3 iezopY"
    >
      Some Description
    </span>
  </span>
</span>
`;

exports[`UserProfile as link 1`] = `
<a
  class="Linkstyles__Box-sc-1fz2put-0 cJkUEH"
  href="https://home.raiffeisen.ru"
>
  <span
    class="UserProfilestyles__Box-sc-12uw6yl-0 jpSCHi"
    role="button"
    tabindex="0"
  >
    <div
      class="Avatarstyles__Box-sc-1gv1068-0 kbavwE"
      title="Super User Name"
    >
      <div
        class="RoundIconstyles__Box-sc-15n018x-0 fpTMsp"
        color="dubai10"
      >
        S
      </div>
      <div
        class="Avatarstyles__ImageLayer-sc-1gv1068-1 efgsYC"
      />
    </div>
    <span
      class="UserProfilestyles__Profile-sc-12uw6yl-1 jijcUx"
    >
      <span
        class="UserProfilestyles__Name-sc-12uw6yl-2 dmpuE"
      >
        Super User Name
      </span>
      <span
        class="UserProfilestyles__Description-sc-12uw6yl-3 iezopY"
      >
        Some Description
      </span>
    </span>
  </span>
</a>
`;

exports[`UserProfile w/ any props 1`] = `
<span
  class="UserProfilestyles__Box-sc-12uw6yl-0 jpSCHi className"
  id="alarm"
  role="button"
  tabindex="0"
  title="title"
>
  <div
    class="Avatarstyles__Box-sc-1gv1068-0 kbavwE"
    title="Super User Name"
  >
    <div
      class="RoundIconstyles__Box-sc-15n018x-0 hUbeFl"
      color="seattle10"
    >
      S
    </div>
    <div
      class="Avatarstyles__ImageLayer-sc-1gv1068-1 hrXwyJ"
      src="https://avataaars.io/?avatarStyle=Transparent&topType=LongHairStraight2&accessoriesType=Prescription01&hairColor=BlondeGolden&facialHairType=MoustacheFancy&facialHairColor=BrownDark&clotheType=BlazerSweater&eyeType=Default&eyebrowType=Default&mouthType=Default&skinColor=Light"
    />
  </div>
  <span
    class="UserProfilestyles__Profile-sc-12uw6yl-1 jijcUx"
  >
    <span
      class="UserProfilestyles__Name-sc-12uw6yl-2 dmpuE"
    >
      Super User Name
    </span>
    <span
      class="UserProfilestyles__Description-sc-12uw6yl-3 iezopY"
    >
      Some Description
    </span>
  </span>
</span>
`;

exports[`UserProfile w/ size: m 1`] = `
<span
  class="UserProfilestyles__Box-sc-12uw6yl-0 jpSCHi"
  role="button"
  tabindex="0"
>
  <div
    class="Avatarstyles__Box-sc-1gv1068-0 kbavwE"
    title="Super User Name"
  >
    <div
      class="RoundIconstyles__Box-sc-15n018x-0 hUbeFl"
      color="seattle10"
    >
      S
    </div>
    <div
      class="Avatarstyles__ImageLayer-sc-1gv1068-1 hrXwyJ"
      src="https://avataaars.io/?avatarStyle=Transparent&topType=LongHairStraight2&accessoriesType=Prescription01&hairColor=BlondeGolden&facialHairType=MoustacheFancy&facialHairColor=BrownDark&clotheType=BlazerSweater&eyeType=Default&eyebrowType=Default&mouthType=Default&skinColor=Light"
    />
  </div>
  <span
    class="UserProfilestyles__Profile-sc-12uw6yl-1 jijcUx"
  >
    <span
      class="UserProfilestyles__Name-sc-12uw6yl-2 dmpuE"
    >
      Super User Name
    </span>
    <span
      class="UserProfilestyles__Description-sc-12uw6yl-3 iezopY"
    >
      Some Description
    </span>
  </span>
</span>
`;

exports[`UserProfile w/ size: s 1`] = `
<span
  class="UserProfilestyles__Box-sc-12uw6yl-0 jpSCHi"
  role="button"
  tabindex="0"
>
  <div
    class="Avatarstyles__Box-sc-1gv1068-0 jtHanR"
    title="Super User Name"
  >
    <div
      class="RoundIconstyles__Box-sc-15n018x-0 hUbeFl"
      color="seattle10"
    >
      S
    </div>
    <div
      class="Avatarstyles__ImageLayer-sc-1gv1068-1 hrXwyJ"
      src="https://avataaars.io/?avatarStyle=Transparent&topType=LongHairStraight2&accessoriesType=Prescription01&hairColor=BlondeGolden&facialHairType=MoustacheFancy&facialHairColor=BrownDark&clotheType=BlazerSweater&eyeType=Default&eyebrowType=Default&mouthType=Default&skinColor=Light"
    />
  </div>
  <span
    class="UserProfilestyles__Profile-sc-12uw6yl-1 jijcUx"
  >
    <span
      class="UserProfilestyles__Name-sc-12uw6yl-2 ezODTw"
    >
      Super User Name
    </span>
    <span
      class="UserProfilestyles__Description-sc-12uw6yl-3 eIZMng"
    >
      Some Description
    </span>
  </span>
</span>
`;

exports[`UserProfile w/ size: xs 1`] = `
<span
  class="UserProfilestyles__Box-sc-12uw6yl-0 jpSCHi"
  role="button"
  tabindex="0"
>
  <div
    class="Avatarstyles__Box-sc-1gv1068-0 eaAtWs"
    title="Super User Name"
  >
    <div
      class="RoundIconstyles__Box-sc-15n018x-0 hUbeFl"
      color="seattle10"
    >
      S
    </div>
    <div
      class="Avatarstyles__ImageLayer-sc-1gv1068-1 hrXwyJ"
      src="https://avataaars.io/?avatarStyle=Transparent&topType=LongHairStraight2&accessoriesType=Prescription01&hairColor=BlondeGolden&facialHairType=MoustacheFancy&facialHairColor=BrownDark&clotheType=BlazerSweater&eyeType=Default&eyebrowType=Default&mouthType=Default&skinColor=Light"
    />
  </div>
  <span
    class="UserProfilestyles__Profile-sc-12uw6yl-1 jijcUx"
  >
    <span
      class="UserProfilestyles__Name-sc-12uw6yl-2 bZOIqD"
    >
      Super User Name
    </span>
    <span
      class="UserProfilestyles__Description-sc-12uw6yl-3 eIZMng"
    >
      Some Description
    </span>
  </span>
</span>
`;

exports[`UserProfile w/o align 1`] = `
<span
  class="UserProfilestyles__Box-sc-12uw6yl-0 fzFTDZ"
  role="button"
  tabindex="0"
>
  <div
    class="Avatarstyles__Box-sc-1gv1068-0 kbavwE"
    title="Super User Name"
  >
    <div
      class="RoundIconstyles__Box-sc-15n018x-0 fpTMsp"
      color="dubai10"
    >
      S
    </div>
    <div
      class="Avatarstyles__ImageLayer-sc-1gv1068-1 efgsYC"
    />
  </div>
  <span
    class="UserProfilestyles__Profile-sc-12uw6yl-1 jvIxrW"
  >
    <span
      class="UserProfilestyles__Name-sc-12uw6yl-2 dmpuE"
    >
      Super User Name
    </span>
    <span
      class="UserProfilestyles__Description-sc-12uw6yl-3 iezopY"
    >
      Some Description
    </span>
  </span>
</span>
`;

exports[`UserProfile w/o description 1`] = `
<span
  class="UserProfilestyles__Box-sc-12uw6yl-0 jpSCHi"
  role="button"
  tabindex="0"
>
  <div
    class="Avatarstyles__Box-sc-1gv1068-0 kbavwE"
    title="Super User Name"
  >
    <div
      class="RoundIconstyles__Box-sc-15n018x-0 hUbeFl"
      color="seattle10"
    >
      S
    </div>
    <div
      class="Avatarstyles__ImageLayer-sc-1gv1068-1 hrXwyJ"
      src="https://avataaars.io/?avatarStyle=Transparent&topType=LongHairStraight2&accessoriesType=Prescription01&hairColor=BlondeGolden&facialHairType=MoustacheFancy&facialHairColor=BrownDark&clotheType=BlazerSweater&eyeType=Default&eyebrowType=Default&mouthType=Default&skinColor=Light"
    />
  </div>
  <span
    class="UserProfilestyles__Profile-sc-12uw6yl-1 jijcUx"
  >
    <span
      class="UserProfilestyles__Name-sc-12uw6yl-2 dmpuE"
    >
      Super User Name
    </span>
    <span
      class="UserProfilestyles__Description-sc-12uw6yl-3 iezopY"
    />
  </span>
</span>
`;

exports[`UserProfile w/o name and description 1`] = `
<span
  class="UserProfilestyles__Box-sc-12uw6yl-0 jpSCHi"
  role="button"
  tabindex="0"
>
  <div
    class="Avatarstyles__Box-sc-1gv1068-0 kbavwE"
  >
    <div
      class="RoundIconstyles__Box-sc-15n018x-0 hUbeFl"
      color="seattle10"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 11a4 4 0 01-4-4V6a4 4 0 118 0v1a4 4 0 01-4 4zm0-7a2 2 0 00-2 2v1a2 2 0 104 0V6a2 2 0 00-2-2zM5.583 14.766A3.512 3.512 0 019.031 12h5.938a3.51 3.51 0 013.445 2.766L19.8 21h-2.047l-1.284-5.8a1.523 1.523 0 00-1.495-1.2H9.036a1.523 1.523 0 00-1.5 1.2L6.247 21H4.2l1.383-6.234z"
        />
      </svg>
    </div>
    <div
      class="Avatarstyles__ImageLayer-sc-1gv1068-1 hrXwyJ"
      src="https://avataaars.io/?avatarStyle=Transparent&topType=LongHairStraight2&accessoriesType=Prescription01&hairColor=BlondeGolden&facialHairType=MoustacheFancy&facialHairColor=BrownDark&clotheType=BlazerSweater&eyeType=Default&eyebrowType=Default&mouthType=Default&skinColor=Light"
    />
  </div>
</span>
`;

exports[`UserProfile w/o photo 1`] = `
<span
  class="UserProfilestyles__Box-sc-12uw6yl-0 jpSCHi"
  role="button"
  tabindex="0"
>
  <div
    class="Avatarstyles__Box-sc-1gv1068-0 kbavwE"
    title="Super User Name"
  >
    <div
      class="RoundIconstyles__Box-sc-15n018x-0 fpTMsp"
      color="dubai10"
    >
      S
    </div>
    <div
      class="Avatarstyles__ImageLayer-sc-1gv1068-1 efgsYC"
    />
  </div>
  <span
    class="UserProfilestyles__Profile-sc-12uw6yl-1 jijcUx"
  >
    <span
      class="UserProfilestyles__Name-sc-12uw6yl-2 dmpuE"
    >
      Super User Name
    </span>
    <span
      class="UserProfilestyles__Description-sc-12uw6yl-3 iezopY"
    >
      Some Description
    </span>
  </span>
</span>
`;
